<resources>
    <string name="app_name">SrishtiAssignment</string>
    <string name="btnLoginSignup">SignIn / SignUp</string>
    <string name="or">OR</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_email">Enter Email / Phone</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_pssword">Forget Pssword ?</string>
    <string name="passenger">PASSENGER</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="login">LOGIN</string>
    <string name="nameInputValidatoin">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_new_password">Enter New Password</string>
</resources>
