<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transperent"
        tools:context="com.karbaros.srishtiassignment.RecoverPasswordActivity">


        <EditText
            android:id="@+id/etConfrmPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="242dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="63dp"
            android:background="@drawable/round_edge"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/etConfrmPhone"
            app:layout_constraintTop_toBottomOf="@+id/etConfrmPhone" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.352" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="242dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="63dp"
            android:background="@drawable/round_edge"
            android:padding="8dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/etNewPassword"
            app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />
    </android.support.constraint.ConstraintLayout>
</layout>